# PD-LLM

./: .gitignore  dasd
backend/: .env.example  .gitignore  pyproject.toml
backend/src/pd_assistant/: __init__.py
backend/src/pd_assistant/core/: __init__.py  config.py  logging.py
backend/src/pd_assistant/inference/: __init__.py  interfaces.py  ollama_client.py  prompt.py
backend/src/pd_assistant/ingestion/: __init__.py
backend/src/pd_assistant/retrieval/: __init__.py  embeddings.py  interfaces.py  qdrant_store.py  service.py  vector_store.py
backend/tests/: test_config.py  test_embeddings.py  test_interfaces.py  test_logging.py  test_ollama_client.py  test_package_layout.py  test_prompt.py  test_qdrant_store.py  test_retrieval.py  test_vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
